<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blanco">

            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_mensaje_nuevo_articulo"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHeader"
                android:textSize="14sp"
                android:textColor="@color/negro"
                android:text="@string/txt_titulo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"/>

            <EditText
                android:id="@+id/editTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:layout_below="@+id/txtTitulo"
                android:hint="@string/txt_mensaje_titulo_poema"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/txtTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTitulo"
                android:textSize="14sp"
                android:textColor="@color/negro"
                android:text="@string/txt_texto"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"/>

            <EditText
                android:id="@+id/editTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_below="@+id/txtTexto"
                android:textSize="16sp"
                android:hint="@string/txt_mensaje_texto_poema"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/txtAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTexto"
                android:textSize="14sp"
                android:textColor="@color/negro"
                android:text="@string/txt_autor"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"/>

            <LinearLayout
                android:id="@+id/linearAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/txtAutor">

                <Spinner
                    android:id="@+id/spinnerAutor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:prompt="@string/txt_seleccionar_autor"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp">
                </Spinner>

                <TextView
                    android:id="@+id/txtMensajeAutor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/txt_mensaje_autor"
                    android:layout_margin="0dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearSpinnerAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linearAutor"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/editAutor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:inputType="textMultiLine"
                    android:hint="@string/txt_mensaje_nuevo_autor"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtFuente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearSpinnerAutor"
                android:textSize="14sp"
                android:textColor="@color/negro"
                android:text="@string/txt_mensaje_extraido"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"/>

            <LinearLayout
                android:id="@+id/linearFuente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/txtFuente"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:id="@+id/spinnerFuente"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:prompt="@string/txt_seleccionar_fuente">
                </Spinner>

                <TextView
                    android:id="@+id/txtMensajeOrigen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/txt_mensaje_fuente"
                    android:layout_margin="0dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearEditFuente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linearFuente"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/editFuente"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:inputType="text"
                    android:hint="@string/txt_mensaje_texto_poema_fuente"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearEditFuente"
                android:textSize="14sp"
                android:textColor="@color/negro"
                android:text="@string/txt_mensaje_tipo_fuente"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"/>

            <Spinner
                android:id="@+id/spinnerTipo"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:prompt="@string/txt_seleccionar_tipo"
                android:layout_below="@+id/txtTipo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">
            </Spinner>

            <RelativeLayout
                android:id="@+id/relativeBtnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerTipo"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_mensaje_guardar_borrador"
                    android:padding="6dp"/>

                <Button
                    android:id="@+id/btnPublicar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_mensaje_publicar"
                    android:layout_toRightOf="@+id/btnGuardar"
                    android:padding="6dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>