<?xml version="1.0" encoding="utf-8"?>
<com.emilsjolander.components.StickyScrollViewItems.StickyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeCont"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_titulo"
            android:textColor="@color/negro"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/txtSubtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_subtitulo"
            android:textColor="@color/gris"
            android:textStyle="normal"
            android:textSize="20sp"
            android:gravity="left"
            android:layout_below="@+id/txtTitulo"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/imgArticulo"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_below="@+id/txtSubtitulo"
            android:src="@color/cardview_dark_background"
            android:contentDescription="@string/txt_placeholder" />

        <TextView
            android:id="@+id/txtTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_contenido"
            android:textColor="@color/gris"
            android:textStyle="normal"
            android:textSize="18sp"
            android:gravity="left"
            android:layout_below="@+id/imgArticulo"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txtSeccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</com.emilsjolander.components.StickyScrollViewItems.StickyScrollView>