<?xml version="1.0" encoding="utf-8"?>
<com.dariov.moviles.lumieresclub.utilities.DVCustomScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgEvento"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/low_poly_lanscape"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgEvento"
            android:text="@string/txt_titulo"
            android:textColor="@color/negro"
            android:textSize="22sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitulo"
            android:layout_alignParentLeft="true"
            android:text="@string/app_name"
            android:textColor="@color/negro"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/txtHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFecha"
            android:layout_alignParentLeft="true"
            android:text="@string/app_name"
            android:textColor="@color/negro"
            android:textSize="14sp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/txtOrganizadoPor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_autor"
            android:textColor="@color/negro"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/txtTitulo"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_descripcion"
            android:textColor="@color/gris"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/txtHora"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/txtTipoEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_seleccionar_tipo"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/txtDireccion"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/txtMapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_mensaje_showmap"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/txtDireccion"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:padding="5dp"/>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandableView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtMapa"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_margin="10dp"
            app:el_duration="700"
            app:el_expanded="false"
            app:el_parallax="0.5">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:context=".DVActivityDetalleEvento"
                android:layout_below="@+id/txtTipoEvento"/>
        </net.cachapa.expandablelayout.ExpandableLayout>

        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_contenido"
            android:textColor="@color/gris"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/expandableView" />
    </RelativeLayout>
</com.dariov.moviles.lumieresclub.utilities.DVCustomScrollView>