<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/blanco">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_mensaje_login"
        android:textColor="@color/gris"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/btnLoginFace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azulFacebook"
        android:text="@string/txt_facebook_login"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:layout_below="@+id/txtTitulo" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/btnLoginTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLoginFace"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <TextView
        android:id="@+id/btnContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/txt_mensaje_btn_login"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/btnLoginTwitter" />
</RelativeLayout>